# llm_chat_term

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
llm_chat_term/: __init__.py  app.py  chat_selector.py  chat_ui.py  config.py  db.py  exceptions.py  help.py  insert_commands.py  llm_client.py  model_selector.py  prompt_menu.py  read_file.py  utils.py
llm_chat_term/audio/: audio_entrypoint.py  pyaudio_no_log.py  recorder.py  speech_to_text.py  voice_command.py
llm_chat_term/llm/: insert_commands.py  llm_chat.py  llm_client.py  models.py  tools.py
llm_chat_term/llm/tools/: definitions.py  main.py
llm_chat_term/llm/tools/handlers/: cat.py  git.py  weather.py
llm_chat_term/ui/: audio_device_selector.py  chat_selector.py  chat_ui.py  confirm_prompt.py  help.py  model_selector.py  prompt_menu.py
