[project]
name = "llm_chat_term"
version = "0.2.4"
description = "Chat with LLMs from the terminal"
authors = [
    {name = "Vasilis Tsiolkas", email = "tsiolkas@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.8",
    "langchain-openai>=0.3.7",
    "prompt-toolkit>=3.0.50",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
voice = [
    "llm-chat-term",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
]

[project.urls]
"Homepage" = "https://github.com/vtsiolkas/llm_chat_term"
"Bug Tracker" = "https://github.com/vtsiolkas/llm_chat_term/issues"

[project.scripts]
llm_chat_term = "llm_chat_term.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportAny = false
reportExplicitAny = false

[tool.ruff.lint]
# Enable all rules, and disable per-case
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "BLE001",
    "TRY003",
    "TRY301",
    "COM812",
    "E501",
    "BLE001",
    "S112",
    "ARG005",
    "UP034",
    "C901",
    "TD002",
    "TD003",
    "FIX002",
    "PLR0912",
    "PLR0915"
]

[tool.uv.sources]
llm-chat-term = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
    "pydub-stubs>=0.25.1.5",
]
