[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "llm-chat-term"
version = "0.2.15"
description = "Chat with LLMs from the terminal"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Vasilis Tsiolkas", email = "tsiolkas@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]
dependencies = [
  "langchain==1.0.8",
  "langchain-anthropic==1.1",
  "langchain-deepseek==1.0.1",
  "langchain-google-genai==3.1",
  "langchain-openai==1.0.3",
  "prompt-toolkit==3.0.52",
  "python-dotenv==1.2.1",
  "pyyaml==6.0.3",
  "rich==14.2",
  "trafilatura==2",
]

optional-dependencies.voice = [
  "llm-chat-term",
  "pyaudio==0.2.14",
  "pydub==0.25.1",
]
urls."Bug Tracker" = "https://github.com/vtsiolkas/llm_chat_term/issues"
urls."Homepage" = "https://github.com/vtsiolkas/llm_chat_term"
scripts.llm_chat_term = "llm_chat_term.app:main"

[dependency-groups]
dev = [
  "debugpy>=1.8.13",
  "pre-commit>=4.1",
  "pydub-stubs>=0.25.1.5",
  "ruff>=0.9.10",
]

[tool.uv.sources]
llm-chat-term = { workspace = true }

[tool.ruff]
# Enable all rules, and disable per-case
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN",
  "ARG005",
  "BLE001",
  "C901",
  "COM812",
  "D",
  "E501",
  "FIX002",
  "PLR0912",
  "PLR0915",
  "S112",
  "TD002",
  "TD003",
  "TRY003",
  "TRY301",
  "UP034",
]

[tool.pyright]
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportAny = false
reportExplicitAny = false
